@@ -64,7 +64,7 @@
    "provides" : {
       "CGI::Tiny" : {
          "file" : "lib/CGI/Tiny.pm",
-         "version" : "0.002"
+         "version" : "0.003"
       }
    },
    "release_status" : "stable",
@@ -79,7 +79,7 @@
          "web" : "https://github.com/Grinnz/CGI-Tiny"
       }
    },
-   "version" : "0.002",
+   "version" : "0.003",
    "x_contributors" : [
       "Dan Book <grinnz@grinnz.com>"
    ],
