@@ -29,7 +29,7 @@ my %WriteMakefileArgs = (
     "MIME::Base64" => 0,
     "Test::More" => "0.96"
   },
-  "VERSION" => "0.002",
+  "VERSION" => "0.003",
   "test" => {
     "TESTS" => "t/*.t"
   }
