@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add set_nph method and support NPH response mode
 
 0.002     2021-04-19 03:59:16 EDT
   - Remove header_names method
